--- a/index.html
+++ b/index.html
@@ -693,24 +693,22 @@
                 </div>
 
                 <div class="mail-outs">
-                    <div>
-                        <p class="subcribe">Подпишитесь на рассылку</p>
-                        <form class="footer-form">
-                            <label for="">
-                                <input
-                                    type="email"
-                                    name="email"
-                                    placeholder="E-mail"
-                                />
-                            </label>
-                        </form>
-                    </div>
-                    <button class="btn footer-btn" type="submit">
-                        Подписаться
-                        <svg class="icon-send" width="24" height="24">
-                            <use href="./images/icons.svg#icon-send"></use>
-                        </svg>
-                    </button>
+                    <p class="subcribe">Подпишитесь на рассылку</p>
+                    <form class="footer-form">
+                        <label for="">
+                            <input
+                                type="email"
+                                name="email"
+                                placeholder="E-mail"
+                            />
+                        </label>
+                        <button class="btn footer-btn" type="submit">
+                            Подписаться
+                            <svg class="icon-send" width="24" height="24">
+                                <use href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </form>
                 </div>
             </div>
         </footer>
@@ -738,7 +736,7 @@
                             />
                             <svg class="contact-icon" width="18" height="18">
                                 <use
-                                    href="./images/person-black-18dp 1.svg"
+                                    href="./images/icons.svg#person-icon"
                                 ></use>
                             </svg>
                         </div>
@@ -753,9 +751,7 @@
                                 id="tel"
                             />
                             <svg class="contact-icon" width="18" height="18">
-                                <use
-                                    href="./images/phone-black-18dp 1.svg"
-                                ></use>
+                                <use href="./images/icons.svg#phone-icon"></use>
                             </svg>
                         </div>
                     </div>
@@ -769,9 +765,7 @@
                                 id="mail"
                             />
                             <svg class="contact-icon" width="18" height="18">
-                                <use
-                                    href="./images/email-black-18dp 1.svg"
-                                ></use>
+                                <use href="./images/icons.svg#email-icon"></use>
                             </svg>
                         </div>
                     </div>
