--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                             <label for="agree" class="checkbox-label"
                                 >Соглашаюсь с рассылкой и принимаю
                                 <a class="agreement-policy" href="#"
-                                    >Условия договора</a
+                                    >&nbsp;Условия договора</a
                                 ></label
                             >
                         </div>
