--- a/portfolio.html
+++ b/portfolio.html
@@ -424,6 +424,24 @@
                         </li>
                     </ul>
                 </div>
+                <div class="mail-outs">
+                    <p class="subcribe">Подпишитесь на рассылку</p>
+                    <form class="footer-form">
+                        <label for="">
+                            <input
+                                type="email"
+                                name="email"
+                                placeholder="E-mail"
+                            />
+                        </label>
+                        <button class="btn footer-btn" type="submit">
+                            Подписаться
+                            <svg class="icon-send" width="24" height="24">
+                                <use href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
         </footer>
     </body>
