--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                 <div class="mail-outs">
                     <p class="subcribe">Подпишитесь на рассылку</p>
                     <form class="footer-form">
-                        <label for="">
+                        <label>
                             <input
                                 type="email"
                                 name="email"
@@ -730,7 +730,7 @@
                         <div class="contact-input-wrapper">
                             <input
                                 class="contact-input"
-                                type="name"
+                                type="text"
                                 name="name"
                                 id="name"
                             />
