--- a/portfolio.html
+++ b/portfolio.html
@@ -427,7 +427,7 @@
                 <div class="mail-outs">
                     <p class="subcribe">Подпишитесь на рассылку</p>
                     <form class="footer-form">
-                        <label for="">
+                        <label>
                             <input
                                 type="email"
                                 name="email"
